--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".auth.Register"></activity>
+        <activity android:name=".Splash"></activity>
+        <activity android:name=".auth.Register" />
         <activity android:name=".auth.Login" />
         <activity
             android:name=".note.EditNote"
