--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-
-    implementation 'com.google.android.exoplayer:exoplayer-core:r2.4.0'
-    implementation 'com.google.android.exoplayer:exoplayer-dash:r2.4.0'
-    implementation 'com.google.android.exoplayer:exoplayer-hls:r2.4.0'
-    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:r2.4.0'
-    implementation 'com.google.android.exoplayer:exoplayer-ui:r2.4.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-hls:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.10.8'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.8'
     implementation 'androidx.cardview:cardview:1.0.0'
 
 }
